[package]
name = "crypto"
version = "0.1.0"
authors = ["max <maxgrinchenko@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.1"

[[bin]]
name = "set1_challenge1"
path = "src/solutions/set1/challenge1/main.rs"

[[bin]]
name = "set1_challenge2"
path = "src/solutions/set1/challenge2/main.rs"

[[bin]]
name = "set1_challenge3"
path = "src/solutions/set1/challenge3/main.rs"

[[bin]]
name = "set1_challenge4"
path = "src/solutions/set1/challenge4/main.rs"
