[package]
name = "crypto"
version = "0.1.0"
authors = ["max <maxgrinchenko@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.1"
aes = "0.8.1"

[[bin]]
name = "set1_challenge1"
path = "src/solutions/set1/challenge1/main.rs"

[[bin]]
name = "set1_challenge2"
path = "src/solutions/set1/challenge2/main.rs"

[[bin]]
name = "set1_challenge3"
path = "src/solutions/set1/challenge3/main.rs"

[[bin]]
name = "set1_challenge4"
path = "src/solutions/set1/challenge4/main.rs"

[[bin]]
name = "set1_challenge5"
path = "src/solutions/set1/challenge5/main.rs"

[[bin]]
name = "set1_challenge6"
path = "src/solutions/set1/challenge6/main.rs"

[[bin]]
name= "set1_challenge7"
path = "src/solutions/set1/challenge7/main.rs"

[[bin]]
name= "set1_challenge8"
path = "src/solutions/set1/challenge8/main.rs"
